--- a/ndex.html
+++ b/ndex.html
@@ -7,7 +7,12 @@
     </head>
     <body>
         <h1>hello world...</h1>
-<img src="http://upload.wikimedia.org/wikipedia/commons/2/2e/World_wide_web.jpg" alt="">
         
+<ul>git command:
+    <li>git add filename</li>
+    <li>git commit -m "message"</li>
+    <li>git push</li>
+    <li>git status</li>
+</ul>
     </body>
 </html>
