add a button to index.html

--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!Doctype html>
 <html>
-    <head>
-        <title>
-            first html
-        </title>
-    </head>
-    <body>
-        <h1>hello world...</h1>
-        
-<ul>git command:
-    <li>git add filename</li>
-    <li>git commit -m "message"</li>
-    <li>git push</li>
-    <li>git status</li>
-</ul>
-<ul>
-<li>ls</li>
-<li>pwd</li>
-<li>cd</li>
-</ul>
-    </body>
+
+<head>
+    <title>
+        first html
+    </title>
+</head>
+
+<body>
+    <h1>hello world...</h1>
+
+    <ul>git command:
+        <li>git add filename</li>
+        <li>git commit -m "message"</li>
+        <li>git push</li>
+        <li>git status</li>
+    </ul>
+    <ul>
+        <li>ls</li>
+        <li>pwd</li>
+        <li>cd</li>
+    </ul>
+    <button type="button">click me</button>
+</body>
+
 </html>
