add a border for the button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li>pwd</li>
         <li>cd</li>
     </ul>
-    <button type="button">click me</button>
+    <button type="button" style="border: solid blue 2px">click me</button>
 </body>
 
 </html>
