--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         <li>cd</li>
     </ul>
     <button type="button" style="border: solid blue 2px">click me</button>
+
+    <h1>Home page</h1>
+    <a href="about.html">about me</a>
+    <br>
+    <a href="blog.html">blogs</a>
 </body>
 
 </html>
